--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -3,19 +3,19 @@ name: build_ErfanGSIs
 on:
 #  release:
 #    types: [published]
-#  push:
-#    branches:
-#      - master
+  push:
+    branches:
+      - master
 #    paths:
 #      - '.config'
 #  schedule:
 #    - cron: 0 8 * * 5
-  watch:
-    types: [started]
+#   watch:
+#     types: [started]
     
 env:
   ROM_URL: https://hugeota.d.miui.com/21.11.22/miui_RAPHAEL_21.11.22_cab4f5b60c_11.0.zip
-  ROM_NAME: MIUI
+  ROM_NAME: Generic
   BUILD_TYPE: ab
   TZ: Asia/Shanghai
 
